# add-mods

./: .gitignore  CMakeLists.txt  DEV.md  README.md  TODO.md  nsis.nsi
scripts/: macBuild.sh.template  winBuild.bat.template  winBuild.sh.template  winPack.py
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  minecraft.cpp  minecraft.h  util.cpp  util.h
toolchain/: mingw64-windows.cmake
